maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:48: error: Unmatched closing brace '}' ignored here
}
^